<resources>
    <string name="app_name">VCBL Tab Banking</string>
    <string name="permission_preference">permission_preference</string>
    <string name="permission_camera">permission_camera</string>
    <string name="permission_contacts">permission_contacts</string>
    <string name="permission_storage">permission_storage</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant !</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">The easiest way to order food from your favourite restaurant!
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant !</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">The easiest way to order food from your favourite restaurant!
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant !</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">The easiest way to order food from your favourite restaurant!
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant,
    The easiest way to order food from your favourite restaurant !</string>
    <string name="my_preference">"com.example.vinay.MyPref"</string>
    <string name="my_preference_key">com.example.vinay.MyPrefKey</string>
    <string name="welcome">Welcome</string>
    <string name="visakha_co_operative_bank_ltd">The Visakhapatnam\nCo-Operative Bank Ltd.</string>
    <string name="visakha_co_operative_bank_ltd_single_line">VISAKHA CO-OPERATIVE BANK LTD.</string>
    <string name="visakha_co_operative_bank_ltd_two_line">VISAKHA CO-OPERATIVE\nBANK LTD.</string>
    <string name="footer_txt">Invented And Developed By\nSaranda Software Pvt. Ltd.</string>
    <string name="password">Password</string>
    <string name="reason">Reason</string>
    <string name="aadhaar_no_star">Aadhaar No. *</string>
    <string name="title_star">Title *</string>
    <string name="first_name_star">First Name *</string>
    <string name="last_name_star">Last Name *</string>
    <string name="father_name_star">Father Name *</string>
    <string name="mother_name_star">Mother Name. *</string>
    <string name="age_star">Age *</string>
    <string name="customer_address_star">Present Address *</string>
    <string name="state_star">State *</string>
    <string name="city_star">City *</string>
    <string name="country_star">Country *</string>
    <string name="language_star">Language *</string>
    <string name="contact_no_star">Contact No. *</string>
    <string name="id_type_star">ID Type *</string>
    <string name="id_number_star">ID Number *</string>
    <string name="name_star">Name *</string>
    <string name="relation_star">Relation *</string>
    <string name="address_star">Address *</string>
    <string name="pin_code_star">Pin Code *</string>
    <string name="education_star">Education *</string>
    <string name="occupation_star">Occupation *</string>
    <string name="community_star">Community *</string>
    <string name="photo_upload_star">Photo Upload *</string>
    <string name="pass_word_star">Password *</string>
    <string name="conf_pass_word_star">Confirm Password *</string>
    <string name="branch_name_star">Branch Name *</string>
    <string name="emp_id_star">Employee ID *</string>
    <string name="mobile_no_star">Mobile No. *</string>
    <string name="email_id_star">Email ID *</string>
    <string name="request">Request</string>
    <string name="login">Login</string>
    <string name="user_registration">User Registration</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="save">Save</string>
    <string name="store">Store</string>
    <string name="register">Register</string>
    <string name="new_user_sign_up">New User ?</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="print">Print</string>
    <string name="reprint">Reprint</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="continu">Continue</string>
    <string name="yes">Yes</string>
    <string name="own">Own</string>
    <string name="rental">Rental</string>
    <string name="accept">Accept</string>
    <string name="accept_the_payment">Accept the payment</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="get">Get</string>
    <string name="go">Go</string>
    <string name="get_details">Get Details</string>
    <string name="loan_details">Loan Details</string>
    <string name="enroll">Enroll</string>
    <string name="biometric">Biometric</string>
    <string name="pin_no">Pin</string>
    <string name="enter_pin_no">Enter card pin no.</string>
    <string name="atm_pin_no">Pin No.</string>
    <string name="check_bt_conn">Check</string>
    <string name="bt_connection">Bluetooth Connection</string>
    <string name="check_bt_connectivity">Check BT Connectivity</string>
    <string name="configure_bt">Configure Bluetooth</string>
    <string name="select_bt_device">Select BT Device</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="network_settings">Network Settings</string>
    <string name="select_protocol">Select Protocol</string>
    <string name="save_settings">Save Settings</string>
    <string name="customize_settings">Customize Settings</string>
    <string name="url">URL</string>
    <string name="mac_address">MAC Address</string>
    <string name="urlLink">106.51.5.55</string>
    <string name="port">Port</string>
    <string name="app">App</string>
    <string name="please_select_device">Select Bluetooth Device</string>
    <string name="scan_bluetooth_device">Scan Bluetooth Device</string>
    <string name="select_baud_rate">Select Baud Rate</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="guardian_first_name">Guardian First Name</string>
    <string name="guardian_last_name">Guardian Last Name</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="head_of_the_family">Head of the Family ?</string>
    <string name="minority">Minority ?</string>
    <string name="auth_person">Authorized Person *</string>
    <string name="house_type">House Type</string>
    <string name="bpl">BPL</string>
    <string name="age">Age</string>
    <string name="land_holding">Land Holding</string>
    <string name="dependent">Dependents</string>
    <string name="pan_gir_no">PAN/GIR No.</string>
    <string name="nrega_no">NREGA No.</string>
    <string name="contact_number">Contact No.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="photo_upload">Photo Upload</string>
    <string name="draw_signature">Draw Signature Here *</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="gender">Gender *</string>
    <string name="education">Education</string>
    <string name="special_category">Special Category *</string>
    <string name="religion">Religion *</string>
    <string name="occupation">Occupation</string>
    <string name="city">City</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="pincode">Pin Code</string>
    <string name="languagey">Language</string>
    <string name="middle_name">Middle Name</string>
    <string name="name">Name</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="last_name">Last Name</string>
    <string name="pin_code">Pin Code</string>
    <string name="country">Country</string>
    <string name="father_name">Father Name</string>
    <string name="customer_address">Present Address</string>
    <string name="address2">Permanent Address</string>
    <string name="address">Address</string>
    <string name="identity">Identity Details</string>
    <string name="issuing_authority">Issuing Authority</string>
    <string name="ssp_no">SSP No.</string>
    <string name="issue_place">Issue Place</string>
    <string name="issue_date">Issue Date</string>
    <string name="date_format">DD/MMM/YYYY</string>
    <string name="mother_name">Mother Name</string>
    <string name="pass_word">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="reset_pass">Reset Password</string>
    <string name="branch_id">Branch ID</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_code">Branch Code</string>
    <string name="title">Title</string>
    <string name="relation">Relation</string>
    <string name="community">Community</string>
    <string name="employee_id">Employee ID</string>
    <string name="mobile_no">Mobile No</string>
    <string name="pan_no">PAN No</string>
    <string name="email_id">Email ID</string>
    <string name="created_by">Created By</string>
    <string name="created_date">Created Date</string>
    <string name="updated_by">Updated By</string>
    <string name="updated_date">Updated Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="no_of_installments">No. of Installments :</string>
    <string name="outstand_balance">Outstand Balance</string>
    <string name="reserve1">Interest Rate</string>
    <string name="reserve2">Drawing Power</string>
    <string name="reserve3">Undebited Amount</string>
    <string name="installment_start_dt">Installment Start Date</string>
    <string name="overdue">Overdue</string>
    <string name="account_status">Account Status</string>
    <string name="account_type">Account Type</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="transaction">Transaction</string>
    <string name="service">Services</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="reports">Reports</string>
    <string name="guardian_details">Guardian Details</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="aadhaar_no">Aadhaar No.</string>
    <string name="protocol">General Protocol</string>
    <string name="escprotocol">Esc Sequence Protocol</string>
    <string name="radio_9600">9600</string>
    <string name="radio_11520">115200</string>
    <string name="ibc">IBC</string>
    <string name="next">Next</string>
    <string name="colon">:</string>
</resources>