<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/transaction" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/service" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_emi_calculator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/emi_calculator" />
        <item
            android:id="@+id/nav_reprint"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reprint" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
