<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_biometric"
        android:orderInCategory="100"
        android:title="@string/biometric"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pin_no"
        android:orderInCategory="200"
        android:title="@string/pin_no"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_bt_conn"
        android:orderInCategory="300"
        android:title="@string/bt_connection"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/network_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_configure_bt"
        android:orderInCategory="500"
        android:title="@string/configure_bt"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_bt_device"
        android:orderInCategory="600"
        android:title="@string/select_bt_device"
        app:showAsAction="never" />

</menu>