<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/ten"
    android:background="@drawable/dialog_design_style"
    android:orientation="vertical"
    android:padding="@dimen/twenty">

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/select_baud_rate"
        android:textColor="@color/brown"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five"
        android:layout_marginBottom="@dimen/ten">

        <RadioButton
            android:id="@+id/first_radio"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/five"
            android:text="@string/radio_9600" />

        <RadioButton
            android:id="@+id/second_radio"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five"
            android:text="@string/radio_11520" />

        <RadioButton
            android:id="@+id/ibc_radio"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five"
            android:text="@string/ibc" />

    </RadioGroup>

</LinearLayout>