<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="@dimen/five">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_main_header"
                        style="@style/text_view_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryTooLight"
                        android:gravity="center"
                        android:padding="@dimen/seven"
                        android:text="@string/guardian_details"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/eighteen_sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/ten">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/text_view_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:text="@string/title_star" />

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/text_view_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.4"
                                android:text="@string/colon" />

                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/spinner_guardian_title"
                                style="@style/spinner_style_square"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5" />

                        </LinearLayout>

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/name_star" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_name"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:hint="@string/name"
                            android:maxLength="50" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/ten"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/text_view_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:text="@string/relation_star" />

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/text_view_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.4"
                                android:text="@string/colon" />

                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/spinner_guardian_relation"
                                style="@style/spinner_style_square"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5" />

                        </LinearLayout>

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/date_of_birth" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_guardian_dob"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:drawableEnd="@drawable/ic_calender_18x18"
                            android:drawableRight="@drawable/ic_calender_18x18"
                            android:hint="@string/date_format"
                            android:text="" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/age_star" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_age"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:hint="@string/age"
                            android:inputType="number"
                            android:maxLength="2" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/address_star" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_address"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:hint="@string/address" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/state_star" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/spinner_guardian_state"
                            style="@style/spinner_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/city_star" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/spinner_guardian_city"
                            style="@style/spinner_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/pin_code" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_pin_code"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:hint="@string/pin_code_star"
                            android:inputType="number"
                            android:maxLength="6" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/aadhaar_no_star" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_aadhaar_no"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/two"
                            android:drawableLeft="@drawable/ic_aadhaar_seeding_24x24"
                            android:drawableStart="@drawable/ic_aadhaar_seeding_24x24"
                            android:hint="@string/aadhaar_no"
                            android:inputType="number"
                            android:maxLength="12" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/text_view_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/five"
                            android:text="@string/contact_number" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_guardian_contact_no"
                            style="@style/edit_text_style_square"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/two"
                            android:drawableLeft="@drawable/ic_mobile_18x18"
                            android:drawableStart="@drawable/ic_mobile_18x18"
                            android:hint="@string/contact_number"
                            android:inputType="phone"
                            android:maxLength="10" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten"
                            android:layout_marginTop="@dimen/twenty"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <!--<android.support.v7.widget.AppCompatButton
                                style="@style/login_btn_style_square"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/four"
                                android:layout_marginRight="@dimen/four"
                                android:layout_weight="0.33"
                                android:text="@string/calculate"
                                android:textSize="@dimen/sixteen_sp"
                                android:visibility="invisible" />-->

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/btn_clear_details"
                                style="@style/login_btn_style_square"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/two"
                                android:layout_marginRight="@dimen/two"
                                android:layout_weight="0.5"
                                android:text="@string/clear" />

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/btn_next"
                                style="@style/login_btn_style_square"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/two"
                                android:layout_marginStart="@dimen/two"
                                android:layout_weight="0.5"
                                android:text="@string/next" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

