<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/ten"
    android:background="@drawable/dialog_design_style"
    android:orientation="vertical"
    android:padding="@dimen/twenty">

    <RadioGroup
        android:id="@+id/radiogrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioprotocol"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/five"
            android:text="@string/protocol" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioesc"
            style="@style/text_view_style"
            android:padding="@dimen/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/escprotocol" />

    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/login_btn_style_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/continu" />

</LinearLayout>